kubernetes/apps/default/mealie/app/securitypolicy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: &name mealie-oidc
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: &route mealie
  oidc:
    provider:
      issuer: "https://auth.${SECRET_DOMAIN}"
    clientID: *route
    clientSecret:
      name: *name
    redirectURL: "https://mealie.${SECRET_DOMAIN}/oauth2/callback"
    logoutPath: "/logout"
